# fasiri

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  404.html  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.yml  docs-requirements.txt  env.example  fasiri.env:Zone.Identifier  get_sunbird_token.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  railway.toml  render.yaml  requirements-docs.txt  requirements.txt  setup.py  sitemap.xml  smoke_test.py  stress_test.py  test_live.py
.github/workflows/: ci-cd.yml  ci.yml  docs.yml  publish.yml
api-reference/: index.html
api-reference/auth/: index.html
api-reference/batch/: index.html
api-reference/errors/: index.html
api-reference/languages/: index.html
api-reference/stt/: index.html
api-reference/translation/: index.html
api-reference/tts/: index.html
app/: main.py
app/api/: auth.py  debug.py  languages.py  speech.py  translate.py
app/core/: config.py  database.py  registry.py  security.py
app/middleware/: auth.py  ratelimit.py
app/schemas/: translate.py
app/services/: routing.py
app/services/providers/: base.py  huggingface.py  khaya.py  sunbird.py
app/utils/: lang_detect.py
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md
docs/api-reference/: auth.md  batch.md  errors.md  index.md  languages.md  stt.md  translation.md  tts.md
docs/assets/javascripts/: extra.js
docs/assets/stylesheets/: extra.css
docs/examples/: chatbot.md  django.md  document-translation.md  fastapi.md  index.md  transcribe-audio.md
docs/getting-started/: authentication.md  index.md  installation.md  languages.md  quickstart.md
docs/guides/: batch-at-scale.md  batch.md  direct-mode.md  error-handling.md  errors.md  index.md  multilingual-app.md  provider-routing.md  rate-limits.md  speech-workflows.md  translation.md
docs/includes/: abbreviations.md
docs/providers/: overview.md
docs/sdk-reference/: async.md  batch.md  client.md  exceptions.md  index.md  speech.md  translate.md  types.md
docs/self-hosting/: docker.md  env.md
examples/: index.html
examples/chatbot/: index.html
examples/django/: index.html
examples/document-translation/: index.html
examples/fastapi/: index.html
examples/transcribe-audio/: index.html
fasiri/: __init__.py  client.py
fasiri/providers/: __init__.py  base.py  huggingface.py  khaya.py  router.py  sunbird.py
getting-started/: index.html
getting-started/authentication/: index.html
getting-started/installation/: index.html
getting-started/languages/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/batch/: index.html
guides/batch-at-scale/: index.html
guides/direct-mode/: index.html
guides/error-handling/: index.html
guides/errors/: index.html
guides/multilingual-app/: index.html
guides/provider-routing/: index.html
guides/rate-limits/: index.html
guides/speech-workflows/: index.html
guides/translation/: index.html
includes/abbreviations/: index.html
nginx/: nginx.conf
nginx/conf.d/: fasiri.conf  proxy_params.conf
providers/overview/: index.html
scripts/: setup_server.sh
sdk/: README_SDK.md
sdk-reference/: index.html
sdk-reference/async/: index.html
sdk-reference/batch/: index.html
sdk-reference/client/: index.html
sdk-reference/exceptions/: index.html
sdk-reference/speech/: index.html
sdk-reference/translate/: index.html
sdk-reference/types/: index.html
sdk/fasiri_sdk/: client.py
search/: search_index.json
self-hosting/docker/: index.html
self-hosting/env/: index.html
tests/: test_translate.py
