[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fasiri"
version = "1.0.0"
description = "Unified translation and speech API for 30+ African languages"
readme = "sdk/README_SDK.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Beta-Tech Labs", email = "dev@betatechlabs.io" }
]
keywords = [
    "african languages", "translation", "nlp", "speech",
    "swahili", "luganda", "yoruba", "hausa", "twi",
    "sunbird", "khaya", "machine translation", "tts", "stt"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
async = ["httpx>=0.27.0"]
dev   = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.urls]
Homepage      = "https://fasiri.ai"
Documentation = "https://docs.fasiri.ai"
Repository    = "https://github.com/umarkhemis/fasiri"
"Bug Tracker" = "https://github.com/umarkhemis/fasiri/issues"
Changelog     = "https://github.com/umarkhemis/fasiri/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["sdk/fasiri_sdk"]

[tool.hatch.build.targets.wheel.sources]
"sdk/fasiri_sdk" = "fasiri"

[tool.hatch.build.targets.sdist]
include = [
    "sdk/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
